crear variable listado facturas api

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="estilos.css">
   <title>Mis Facturas</title>
+  <script src="js/script.js" defer></script>
 </head>
 
 <body>
