crear fila dummy con estilo .off

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr class="lista-dummy">
             <td>1000</td>
             <td>13/06/2018</td>
             <td>App Angular</td>
