añadir primer elemento de la primera factura

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <th class="col-max">Vence</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="lista-facturas">
           <tr class="lista-dummy">
             <td>1000</td>
             <td>13/06/2018</td>
