Añadir todas las filas tipo ingreso

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         </thead>
         <tbody class="lista-facturas">
           <tr class="lista-dummy">
-            <td>1000</td>
-            <td>13/06/2018</td>
-            <td>App Angular</td>
-            <td>3000€</td>
-            <td>630€ (21%)</td>
-            <td>3630€</td>
-            <td class="table-success">Abonada</td>
-            <td class="table-success">-</td>
+            <td class="numero">1000</td>
+            <td class="fecha">13/06/2018</td>
+            <td class="concepto">App Angular</td>
+            <td class="base">3000€</td>
+            <td class="iva">630€ (21%)</td>
+            <td class="total">3630€</td>
+            <td class="estado table-success">Abonada</td>
+            <td class="vence table-success">-</td>
           </tr>
           <tr>
             <td>1000</td>
