cambiar fecha a formato aa/aa/aaaa

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="estilos.css">
   <title>Mis Facturas</title>
   <script src="js/script.js" defer></script>
+  <script src=" https://moment.github.io/luxon/global/luxon.min.js"></script>
 </head>
 
 <body>
