--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <tfoot>
           <tr>
             <th class="text-right" colspan="3">Totales:</th>
-            <td>5000€</td>
-            <td>5000€</td>
-            <td>5000€</td>
+            <td class="base-total">5000€</td>
+            <td class="iva-total">5000€</td>
+            <td class="resultado-total">5000€</td>
             <td colspan="2"></td>
           </tr>
         </tfoot>
