bugfix/ añadido simbolo €, cambio iva, vaciado html y Abonado/Pendiente

--- a/index.html
+++ b/index.html
@@ -42,52 +42,22 @@
         </thead>
         <tbody class="lista-facturas">
           <tr class="lista-dummy">
-            <td class="numero">1000</td>
-            <td class="fecha">13/06/2018</td>
-            <td class="concepto">App Angular</td>
-            <td class="base">3000€</td>
-            <td class="iva">630€ (21%)</td>
-            <td class="total">3630€</td>
-            <td class="estado table-success">Abonada</td>
-            <td class="vence table-success">-</td>
-          </tr>
-          <tr>
-            <td>1000</td>
-            <td>13/06/2018</td>
-            <td>App Angular</td>
-            <td>3000€</td>
-            <td>630€ (21%)</td>
-            <td>3630€</td>
-            <td class="table-success">Abonada</td>
-            <td class="table-success">-</td>
-          </tr>
-          <tr>
-            <td>1000</td>
-            <td>13/06/2018</td>
-            <td>App Angular</td>
-            <td>3000€</td>
-            <td>630€ (21%)</td>
-            <td>3630€</td>
-            <td class="table-danger">Pendiente</td>
-            <td class="table-danger">28/2/2021 (hace x días)</td>
-          </tr>
-          <tr>
-            <td>1000</td>
-            <td>13/06/2018</td>
-            <td>App Angular</td>
-            <td>3000€</td>
-            <td>630€ (21%)</td>
-            <td>3630€</td>
-            <td class="table-danger">Pendiente</td>
-            <td class="table-success">1/4/2021 (faltan x días)</td>
+            <td class="numero"></td>
+            <td class="fecha"></td>
+            <td class="concepto"></td>
+            <td class="base"></td>
+            <td class="iva"></td>
+            <td class="total"></td>
+            <td class="estado table-success"></td>
+            <td class="vence table-success"></td>
           </tr>
         </tbody>
         <tfoot>
           <tr>
             <th class="text-right" colspan="3">Totales:</th>
-            <td class="base-total">5000€</td>
-            <td class="iva-total">5000€</td>
-            <td class="resultado-total">5000€</td>
+            <td class="base-total"></td>
+            <td class="iva-total"></td>
+            <td class="resultado-total"></td>
             <td colspan="2"></td>
           </tr>
         </tfoot>
